<resources>
    <string name="header_computers">Computer Science</string>
    <string name="header_movies">Movies</string>
    <string name="header_general">General Questions</string>
    <string name="app_name">Quiz</string>
    <string name="question_1">1. Which of the following memories is an optical memory?</string>
    <string name="answer_1a">A. Floppy Disk</string>
    <string name="answer_1b">B. Bubble Memories</string>
    <string name="answer_1c">C. CD–ROM</string>
    <string name="answer_1d">D. Core Memories</string>
    <string name="question_2">2. DNS refers to</string>
    <string name="answer_2a">A. Data Number Sequence</string>
    <string name="answer_2b">B. Digital Network Service</string>
    <string name="answer_2c">C. Domain Name System</string>
    <string name="answer_2d">D. Disk Numbering System</string>
    <string name="question_3">3. Java was originally invented by</string>
    <string name="answer_3a">A. Oracle</string>
    <string name="answer_3b">B. Microsoft</string>
    <string name="answer_3c">C. Novell</string>
    <string name="answer_3d">D. Sun</string>
    <string name="question_4">4. The unit of speed used for super computer is</string>
    <string name="answer_4a">A. KELOPS</string>
    <string name="answer_4b">B. GELOPS</string>
    <string name="answer_4c">C. MELOPS</string>
    <string name="answer_4d">D. None of these</string>
    <string name="question_5">5. Whose trademark is the operating system UNIX?</string>
    <string name="answer_5a">A. Motorola</string>
    <string name="answer_5b">B. Microsoft</string>
    <string name="answer_5c">C. BELL Laboratories</string>
    <string name="answer_5d">D. AshtonTate</string>
    <string name="question_6">6. Which film features the famous quote "Say hello to my little friend"?</string>
    <string name="answer_6a">A. Goodfellas</string>
    <string name="answer_6b">B. The Godfather</string>
    <string name="answer_6c">C. Scarface</string>
    <string name="answer_6d">D. Raging Bull</string>
    <string name="question_7">7. Which film did not feature both Tom Hanks and Gary Sinise?</string>
    <string name="answer_7a">A. The Green Mile</string>
    <string name="answer_7b">B. Apollo 13</string>
    <string name="answer_7c">C. Forrest Gump</string>
    <string name="answer_7d">D. Saving Private Ryan</string>
    <string name="question_8">8. Which of these films won the Academy Award for Best Picture? </string>
    <string name="answer_8a">A. A Few Good Men</string>
    <string name="answer_8b">B. Fatal Attraction</string>
    <string name="answer_8c">C. Rain Man</string>
    <string name="answer_8d">D. Scent of a Woman</string>
    <string name="question_9">10. What colour is the sky ?(More than one is Correct)</string>
    <string name="answer_9a">A. Blue</string>
    <string name="answer_9b">B. Black</string>
    <string name="answer_9c">C. Red</string>
    <string name="answer_9d">D. Green</string>
    <string name="answer_hint">Enter A, B, C or D</string>
    <string name="button_text">Submit</string>
</resources>
