<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.vgeorgopoulos.quiz.MainActivity">

        <TextView
            android:id="@+id/firstCategory"
            style="@style/HeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/header_computers" />

        <TextView
            android:id="@+id/firstQuestion"
            style="@style/QuestionStyle"
            android:layout_below="@id/firstCategory"
            android:text="@string/question_1" />

        <RadioGroup
            android:id="@+id/firstQuestionGroup"
            style="@style/RadioGroupStyle"
            android:layout_below="@id/firstQuestion">

            <RadioButton
                android:id="@+id/answerOneARadio"
                style="@style/RadioStyle"
                android:text="@string/answer_1a" />

            <RadioButton
                android:id="@+id/answerOneBRadio"
                style="@style/RadioStyle"
                android:text="@string/answer_1b" />

            <RadioButton
                android:id="@+id/answerOneCRadio"
                style="@style/RadioStyle"
                android:text="@string/answer_1c"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/answerOneDRadio"
                style="@style/RadioStyle"
                android:text="@string/answer_1d" />

        </RadioGroup>

        <TextView
            android:id="@+id/secondQuestion"
            style="@style/QuestionStyle"
            android:layout_below="@id/firstQuestionGroup"
            android:text="@string/question_2" />

        <RadioGroup
            android:id="@+id/secondQuestionGroup"
            style="@style/RadioGroupStyle"
            android:layout_below="@id/secondQuestion">

            <RadioButton
                android:id="@+id/answerTwoARadio"
                style="@style/RadioStyle"
                android:text="@string/answer_2a" />

            <RadioButton
                android:id="@+id/answerTwoBRadio"
                style="@style/RadioStyle"
                android:text="@string/answer_2b" />

            <RadioButton
                android:id="@+id/answerTwoCRadio"
                style="@style/RadioStyle"
                android:text="@string/answer_2c" />

            <RadioButton
                android:id="@+id/answerTwoDRadio"
                style="@style/RadioStyle"
                android:text="@string/answer_2d" />
        </RadioGroup>

        <TextView
            android:id="@+id/thirdQuestion"
            style="@style/QuestionStyle"
            android:layout_below="@id/secondQuestionGroup"
            android:text="@string/question_2" />

        <RadioGroup
            android:id="@+id/thirdQuestionGroup"
            style="@style/RadioGroupStyle"
            android:layout_below="@id/thirdQuestion">

            <RadioButton
                android:id="@+id/answerThreeARadio"
                style="@style/RadioStyle"
                android:text="@string/answer_3a" />

            <RadioButton
                android:id="@+id/answerThreeBRadio"
                style="@style/RadioStyle"
                android:text="@string/answer_3b" />

            <RadioButton
                android:id="@+id/answerThreeCRadio"
                style="@style/RadioStyle"
                android:text="@string/answer_3c" />

            <RadioButton
                android:id="@+id/answerThreeDRadio"
                style="@style/RadioStyle"
                android:text="@string/answer_3d" />
        </RadioGroup>

    </RelativeLayout>

</ScrollView>